--- a/resources/doc/changelog.txt
+++ b/resources/doc/changelog.txt
@@ -1,2 +1,5 @@
 2022-03-19 1.0
 am eliminat filtrul pe avocat la lista parteneri (era deja eliminat in vechea versiune)
+
+2022-03-19 1.0.001
+am modificat variabila $this->idUserLogin  = $result[0]->id;, acum are tot id user
