2022-03-19 1.2.000    - raport facturi emise in excel
Signed-off-by: GLP <gavrilapaul@gmail.com>

--- a/resources/doc/changelog.txt
+++ b/resources/doc/changelog.txt
@@ -1,8 +1,5 @@
-2022-03-19 1.0
-                    am eliminat filtrul pe avocat la lista parteneri (era deja eliminat in vechea versiune)
+2022-03-19 1.2.000    - raport facturi emise in excel
+2022-03-19 1.0        - am eliminat filtrul pe avocat la lista parteneri (era deja eliminat in vechea versiune)
+2022-03-19 1.0.001    -  am modificat variabila $this->idUserLogin  = $result[0]->id;, acum are tot id user
 
-2022-03-19 1.0.001
-                    am modificat variabila $this->idUserLogin  = $result[0]->id;, acum are tot id user
 
-2022-03-19 1.1.000 (in progress)
-                    add mk-j
