--- a/resources/doc/changelog.txt
+++ b/resources/doc/changelog.txt
@@ -1,3 +1,4 @@
+2022-05-31 1.5.100    - modificare ordonare lista facturi emise
 2022-05-31 1.5.000    - bug fix - completare registrul comertului la adaugare partener
 					  - denumire factura la tiparire cu diacritice - eliminat diacriticele din numele fiserului
 					  - adaugare si modificare denumire produs
