--- a/resources/doc/changelog.txt
+++ b/resources/doc/changelog.txt
@@ -1,3 +1,4 @@
+2022-06-08 1.6.100    - debug
 2022-06-07 1.6.000    - logare pe baza de date anonimizata
 2022-05-31 1.5.100    - modificare ordonare lista facturi emise
 2022-05-31 1.5.000    - bug fix - completare registrul comertului la adaugare partener
