2023-11-11 1.7.100    - implementare eFactura, validata de site MF, efactura nu se salveaza in baza de date

--- a/resources/doc/changelog.txt
+++ b/resources/doc/changelog.txt
@@ -1,4 +1,5 @@
-2023-11-11 1.7.000    - implementare eFactura in mod test, e factura nu se salveaza in baza de date  
+2023-11-11 1.7.100    - implementare eFactura, validata de site MF, efactura nu se salveaza in baza de date  
+2023-11-11 1.7.000    - implementare eFactura in mod test, efactura nu se salveaza in baza de date  
 2022-09-04 1.6.400    - bug fix - update folosit la factura in momentul in care se refoloseste un numar pe incassare cu chitanta fiscala
 2022-09-04 1.6.300    - bug fix - numarul de factura nefolosit trebuie sa ignore numarul bagat de mana
 2022-06-08 1.6.200    - bug fix - logInOut se face pe baza id user
